# butcher

./: .gitignore  ChangeLog.md  LICENSE  README.md  butcher.cabal  cabal.project  cmdparse-applicative.cabal  default.nix  example1.md  example2.md  example3.md  iridium.yaml  shell.nix  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
nix/: .gitignore  README.md  all.nix  ci.sh  via-hackage.nix  via-stackage.nix
src-tests/: TestMain.hs
src/UI/Butcher/: Monadic.hs
src/UI/Butcher/Monadic/: BuiltinCommands.hs  Command.hs  Core.hs  Flag.hs  IO.hs  Interactive.hs  Param.hs  Pretty.hs  Types.hs
src/UI/Butcher/Monadic/Internal/: Core.hs  Types.hs
src/UI/CmdParse/: Applicative.hs  Monadic.hs
src/UI/CmdParse/Applicative/: Types.hs
src/UI/CmdParse/Monadic/: Types.hs
srcinc/: prelude.inc
